--- a/style.css
+++ b/style.css
@@ -10,13 +10,38 @@
     --font--primaria: 'Franklin Gothic Medium', sans-serif;
     --font--secundaria: 'Raleway', sans-serif;
 }
+
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
 }
 
 body{
+   font-size: 100%;
+}
+
+.menu{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px;
+    z-index: 1;
+}
+.menu__logo{
+    width: 200PX;
+    object-fit: contain;
+}
+.menu__botao{
+    display: flex;
+    gap: 50px;
+    color: var(--cor--botao);
     font-family: var(--font--primaria);
-    background-color: var(--cor--fundo);
-    color: var(--cor--secundaria);
+    font-size: 30px;
+    padding: 0% 5% 0% 0%;
 }
