--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;800&family=Poppins:wght@400;500&family=Raleway&display=swap');
 
 :root{
-    --cor--menu: #000000;
-    --cor--fundo:#3f3e3e;
+    --cor--fundo: #00030c;
     --cor--secundaria:#ffffff;
     --cor--botao: #86196B;
     --cor--botao--hover: #FFD4B2;
@@ -20,28 +19,38 @@
 
 body{
    font-size: 100%;
+   background-color: var(--cor--fundo);
 }
-
 .menu{
-    position: fixed;
-    top: 0;
-    width: 100%;
+    background-image: url(assets/backgroung.png);
+    background-repeat: no-repeat;
+    background-position: right top;
+    background-attachment: fixed;
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-between;
-    padding: 50px;
+    align-items: center;
     z-index: 1;
 }
+
 .menu__logo{
-    width: 200PX;
-    object-fit: contain;
+    width: 100px;
+    height: 50px;
 }
+
 .menu__botao{
-    display: flex;
-    gap: 50px;
-    color: var(--cor--botao);
+    justify-content: space-around;
+    gap: 30px;
+    color: var(--cor--secundaria);
     font-family: var(--font--primaria);
-    font-size: 30px;
-    padding: 0% 5% 0% 0%;
+    font-size: 24px;
+}
+.menu__botao__assinar{
+    background-color: var(--cor--botao);
+}
+.menu__botao__assinar:hover{
+    background-color: var(--cor--botao--hover);
+}
+.menu__botao__entrar:hover{
+    background-color: var(--cor--botao--hover);
 }
