--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
 
 .menu__fundo{
     background-image: url(assets/backgroung.png);
-    background-size: cover;
+    background-size: contain;
     background-position: center center;
     color: var(--cor--secundaria);
     object-fit: contain;
@@ -116,14 +116,20 @@ body{
 .corpo{
     padding: 4%;
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: 70px;
 }
 
 .corpo__titulo{
     font-family: var(--font--primaria);
-    flex-direction: column;
     justify-content: center;
+    font-size: 30px;
 }
 
-.corpo__valores{
-    padding: 10% 10% 10% 10%;
+.corpo__valores__mensais{
+    font-family: var(--font--primaria);
+    font-size: 20px;
+    flex-direction: row;
 }
