--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ body{
 }
 
 .corpo{
+    text-align: center;
     padding: 4%;
     display: flex;
     align-items: center;
@@ -123,22 +124,45 @@ body{
 }
 
 .corpo__titulo{
+    padding: 2% 2%;
     font-family: var(--font--primaria);
     justify-content: center;
-    font-size: 30px;
+    font-size: 28px;
+    color: var(--cor--secundaria);
 }
 .corpo__valores{
-    padding: 4%;
+    padding: 2;
+    color: var(--cor--secundaria);
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
-    gap: 70px;
+    gap: 40px;
 }
 .corpo__valores__mensais{
     font-family: var(--font--primaria);
-    font-size: 20px;
-    padding: 30px 30px;
+    font-size: 15px;
+    padding: 40px 40px 80px 20px ;
     border-radius: 10%;
     border: solid var(--cor--botao);
+    text-align: center;
+}
+
+.corpo__valores__strong{
+    font-size: 40px;
+}
+
+.corpo__botao__assinar{
+    text-align: center;
+    font-family: var(--font--primaria);
+    background: linear-gradient(var(--cor--botao--hover));
+    color: var(--cor--secundaria);
+    padding: 10px;
+    border-radius: 8%;
+}
+.corpo__botao__assinar:hover{
+    padding: 20px;
+    border-radius: 8%;
+    font-size: 20px;
+
 }
