--- a/style.css
+++ b/style.css
@@ -129,16 +129,22 @@ body{
     justify-content: space-between;
     flex-direction: column;
     gap: 70px;
+    color: var(--cor--secundaria);
 }
 
-.corpo__titulo{
-    padding: 5% 0% 0% 0%;
+.container__corpo{
+    height: 100vh;
+    text-align: center;
+
+}
+.container__corpo__titulo{
+    margin-top: 15%;
+    padding: 5% 0% 5% 0%;
     font-family: var(--font--primaria);
     justify-content: center;
     font-size: 30px;
-    color: var(--cor--secundaria);
 }
-.corpo__valores{
+.container__corpo__valores{
     padding: 1px;
     color: var(--cor--secundaria);
     display: flex;
@@ -147,7 +153,7 @@ body{
     flex-direction: row;
     gap: 30px ;
 }
-.corpo__valores__mensais{
+.container__corpo__valores__mensais{
     display: flex;
     justify-content: center;
     gap: 20px;
@@ -160,16 +166,16 @@ body{
     text-align: center;
 }
 
-.corpo__valores__strong1{
+.container__corpo__valores__strong1{
     font-size: 35px;
 }
-.corpo__valores__strong2{
+.container__corpo__valores__strong2{
     font-size: 40px;
     color: var(--cor--botao);
     text-shadow: 2px 2px var(--cor--sombra);
 }
 
-.corpo__botao__assinar{
+.container__corpo__botao__assinar{
     text-align: center;
     font-family: var(--font--primaria);
     background: linear-gradient(var(--cor--botao--hover));
@@ -177,41 +183,13 @@ body{
     padding: 10px;
     border-radius: 8px;
 }
-.corpo__botao__assinar:hover{
+.container__corpo__botao__assinar:hover{
     background: none;
     border-style: solid;
     border-width: 2px; 
 }
-
 .corpo2{
-    display: flex;
-    flex-direction: column;
     
-}
-.corpo2__titulo{
-    text-align: center;
-    font-family: var(--font--primaria);
-    color: var(--cor--secundaria);
-    padding-top: 10%;
-    padding-bottom: 5%;
-    font-size: 30px;
-}
-.corpo2__conteudo{ 
-    color: var(--cor--secundaria);
-    font-family: var(--font--secundaria);
-    font-size: 20px;
-    text-align: left;
-    padding-bottom: 5%;
-}
-
-.corpo2__icone{
-    align-items: center;
-    width: 10px;
-    height: 10px;
-}
-.secao__dispositivos{
-    color: var(--cor--secundaria);
-    font-family: var(--font--primaria);
 }
 
 .rodape{
