--- a/style.css
+++ b/style.css
@@ -214,6 +214,12 @@ body{
     display: flex; 
     justify-content: center;
     list-style-type: none;
+    justify-content: space-between;
+    align-items: flex-end;
+    gap: 130px; 
+}
+.lista__item{
+    padding-top: 20px;
 }
 
 .pergunta{
